--- a/javajam.css
+++ b/javajam.css
@@ -1,3 +1,4 @@
+*{box-sizing:border-box;}
 body { background-color: #FCEBB6; 
       color: #221811;
       font-family: Verdana, Arial, sans-serif;
